<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright 2016 Luca Martino.
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copyFile of the License at
    *
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
    *-->


<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/gray"
    android:dividerHeight="1dp">

    <nie.translator.rtranslator.settings.UserImagePreference
        android:key="userImage"
        android:layout="@layout/preference_user_image"
        app:iconSpaceReserved="false" />

    <nie.translator.rtranslator.settings.UserNamePreference
        android:key="changeName"
        android:layout="@layout/preference_user_name"
        app:iconSpaceReserved="false" />

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_input"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true">
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="micSensibilitySetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_language"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <nie.translator.rtranslator.settings.SupportLanguagesQuality
            android:defaultValue="false"
            android:key="languagesNNQualityLow"
            android:title="@string/preference_title_languages_quality"
            android:summary="@string/preference_description_languages_quality"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SupportTtsQualityPreference
            android:defaultValue="false"
            android:key="languagesQualityLow"
            android:title="@string/preference_title_support_tts_quality"
            android:summary="@string/preference_description_support_tts_quality"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.LanguagePreference
            android:key="language"
            android:title="@string/preference_title_language"
            android:dialogTitle="Application language"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_output"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <androidx.preference.Preference
            android:key="tts"
            android:title="@string/preference_title_tts"
            android:summary="@string/preference_description_tts"
            app:iconSpaceReserved="false" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="onlineTtsEnabled"
            android:title="@string/preference_title_online_tts_enabled"
            android:summary="@string/preference_description_online_tts_enabled"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="https://t.leftsite.cn"
            android:key="onlineTtsApiBaseUrl"
            android:title="@string/preference_title_online_tts_api_base_url"
            android:summary="@string/preference_description_online_tts_api_base_url"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:key="onlineTtsApiKey"
            android:title="@string/preference_title_online_tts_api_key"
            android:summary="@string/preference_description_online_tts_api_key"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="zh-CN-XiaochenMultilingualNeural"
            android:key="onlineTtsVoice"
            android:title="@string/preference_title_online_tts_voice"
            android:summary="@string/preference_description_online_tts_voice"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="-20%"
            android:key="onlineTtsRate"
            android:title="@string/preference_title_online_tts_rate"
            android:summary="@string/preference_description_online_tts_rate"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="0%"
            android:key="onlineTtsPitch"
            android:title="@string/preference_title_online_tts_pitch"
            android:summary="@string/preference_description_online_tts_pitch"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:key="onlineTtsStyle"
            android:title="@string/preference_title_online_tts_style"
            android:summary="@string/preference_description_online_tts_style"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="audio-24khz-48kbitrate-mono-mp3"
            android:key="onlineTtsOutputFormat"
            android:title="@string/preference_title_online_tts_output_format"
            android:summary="@string/preference_description_online_tts_output_format"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/preference_header_advanced"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="llmTranslationEnabled"
            android:title="@string/preference_title_llm_translation_enabled"
            android:summary="@string/preference_description_llm_translation_enabled"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="https://api.openai.com/v1"
            android:key="llmTranslationApiBaseUrl"
            android:title="@string/preference_title_llm_api_base_url"
            android:summary="@string/preference_description_llm_api_base_url"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:key="llmTranslationApiKey"
            android:title="@string/preference_title_llm_api_key"
            android:summary="@string/preference_description_llm_api_key"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="gpt-4o-mini"
            android:key="llmTranslationModel"
            android:title="@string/preference_title_llm_model"
            android:summary="@string/preference_description_llm_model"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="0.3"
            android:key="llmTranslationTemperature"
            android:title="@string/preference_title_llm_temperature"
            android:summary="@string/preference_description_llm_temperature"
            app:iconSpaceReserved="false" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="llmTranslationDisableThinking"
            android:title="@string/preference_title_llm_disable_thinking"
            android:summary="@string/preference_description_llm_disable_thinking"
            app:iconSpaceReserved="false" />
        <androidx.preference.EditTextPreference
            android:defaultValue="自然直译风格：在保留原文结构和含义的基础上，让译文符合目标语言的表达习惯，读起来流畅自然，不生硬。只输出译文，不要解释。"
            android:key="llmTranslationPrompt"
            android:title="@string/preference_title_llm_prompt"
            android:summary="@string/preference_description_llm_prompt"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.ShowOriginalTranscriptionMsgPreference
            android:defaultValue="false"
            android:key="ShowOriginalTranscriptionMsgPreference"
            android:title="@string/preference_title_show_original_transcription"
            android:summary="@string/preference_description_show_original_transcription_msg_preference"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="BeamSizeSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="SpeechTimeoutSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
        <nie.translator.rtranslator.settings.SeekBarPreference
            android:key="PrevVoiceDurationSetting"
            android:layout="@layout/preference_seekbar"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
